package lsd;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.goproto_unrecognized_all) = false;

message lsd_config {
    message server_config_t {
        message server_settings_t {
            repeated string categories = 1; // category masks list (only "*" is supported as mask)
            optional uint64 max_file_size = 2; // max output file size in bytes
            optional uint64 file_rotate_interval = 3; // output file rotate interval in seconds
            optional bool   chunk_output = 4 [default = true]; // do output in chunks (scribe compatiblity)
        };

        required string target_dir = 1;
        optional uint64 max_file_size = 2 [default = 5000000]; // max output file size in bytes
        optional uint64 file_rotate_interval = 3 [default = 5]; // output file rotate interval in seconds
        repeated server_settings_t per_category_settings = 4; // per-category settings (max_file_size and file_rotate_interval)
        optional bool chunk_output = 5 [default = true]; // do output in chunks (scribe compatiblity)
    };

    message client_config_t {
        message receiver_t {
            required string addr = 1;
            required uint64 weight = 2;
        };

        message routing_config_t {
            repeated string categories = 1; // category masks list (only "*" is supported as mask)
            repeated receiver_t receivers = 2;
            optional bool prefix_sharding = 3 [default = false]; // whether or not to shard by prefix
            optional bool cut_prefix = 4 [default = false]; // if sharding by prefix, cut the prefix or not?
            optional string prefix_delimiter = 5 [default = ":"]; // delimiter for the prefix
        };

        required string source_dir = 1;
        repeated routing_config_t routing = 2;
        optional uint64 max_file_size = 3 [default = 1000000]; // max file size for plain files before rotation
        required string offsets_db = 4;
        optional uint64 usage_check_interval = 5 [default = 60]; // file usage check interval in seconds
        optional bool always_flock = 6 [default = false]; // always flock files, required for re-streaming
    };

    optional server_config_t server_config = 1;
    optional client_config_t client_config = 2;
}
